--- a/app/public/yqs/index.html
+++ b/app/public/yqs/index.html
@@ -11,5 +11,5 @@
   <div class="test">
     index
   </div>
-<script type="text/javascript" src="/js/index.32f7bba.bundle.js"></script></body>
+<script type="text/javascript" src="/public/yqs/js/index.e50380b.bundle.js"></script></body>
 </html>
