--- a/app/public/yqs/yqs.html
+++ b/app/public/yqs/yqs.html
@@ -12,7 +12,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/jquery-easing/1.3/jquery.easing.min.js"></script>
-<link href="/./css/yqs-css.2580504.css" rel="stylesheet"></head>
+<link href="/public/yqs/./css/yqs-css.55b1f53.css" rel="stylesheet"></head>
 
 <body>
   <div class="main">
@@ -261,6 +261,6 @@
       });
     }
   </script>
-<script type="text/javascript" src="/js/yqs.8ddb71c.bundle.js"></script></body>
+<script type="text/javascript" src="/public/yqs/js/yqs.be0cc33.bundle.js"></script></body>
 
 </html>
